# ai-connect

./: Cargo.toml  LICENSE  README.md  justfile  rust-analyzer.toml
.cargo/: config.toml
src/: client.rs  error.rs  lib.rs  local_server.rs  main.rs  pkce.rs  provider.rs  types.rs
src/local_server/: config.rs  http.rs  mod.rs  server.rs  target.rs
src/local_server/html/: error.html  success.html
src/providers/: anthropic.rs  mod.rs  openai.rs  provider.rs
