[package]
name = "ai-connect"
version = "0.1.0"
authors = ["Justin Garofolo <justin@garofolo.net>"]
edition = "2024"
license = "MIT"
description = "Connect to AI provider accounts via OAuth 2.0 + PKCE. Supports Anthropic, OpenAI, and custom providers."
repository = "https://github.com/ooojustin/ai-connect"
readme = "README.md"
keywords = ["oauth", "pkce", "anthropic", "openai", "ai"]
categories = ["authentication", "api-bindings"]
autobins = false

[dependencies]
axum = { version = "0.8", optional = true }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"], optional = true }
rand = "0.9"
reqwest = { version = "0.13", features = ["json", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
url = "2.5"
webbrowser = { version = "1", optional = true }

[features]
default = []
local-server = ["axum"]
cli = ["webbrowser", "clap", "local-server"]

[[bin]]
name = "ai-connect"
path = "src/main.rs"
required-features = ["cli"]
